# qscripts

./: CLAUDE.md  CMakeLists.txt  ida-plugin.json  prep-cmake.bat
.github/workflows/: build.yml
